Change policyd-spf to install with yum No longer prefetch clamav virus databases Update Roundcube to 1.4.11 Include php-xml for phpmyadmin builds Update inline documentation to indicate that the snapshot restore     parameter for Mail storqge takes a snapshot ID, not a name Fix bug in restore database from snapshot. Fix bug in postgrey configuration
Please enter the commit message for your changes. Lines starting

--- a/templates/aws-mirovoy-ref-arch-03-nat.yaml
+++ b/templates/aws-mirovoy-ref-arch-03-nat.yaml
@@ -13,7 +13,7 @@ Metadata:
     Description: Chris Richardson (cwr@mirovoysales.com)
 
   License:
-    Description: 'Copyright 2019 Mirovoy Sales, s.r.o. and its affiliates.
+    Description: 'Copyright 2019-2021 Mirovoy Sales, s.r.o. and its affiliates.
       All Rights Reserved.
       SPDX-License-Identifier: MIT-0'
 
