--- a/templates/aws-mirovoy-ref-arch-02-mail-storage.yaml
+++ b/templates/aws-mirovoy-ref-arch-02-mail-storage.yaml
@@ -13,7 +13,7 @@ Metadata:
     Description: Chris Richardson (cwr@mirovoysales.com)
 
   License:
-    Description: 'Copyright 2018-2019 Mirovoy Sales, s.r.o. and its affiliates.
+    Description: 'Copyright 2018-2021 Mirovoy Sales, s.r.o. and its affiliates.
       All Rights Reserved.
       SPDX-License-Identifier: MIT-0'
 
@@ -105,7 +105,7 @@ Parameters:
     Type: Number
   LogSnapshot:
     Default: ""
-    Description: The snapshot name from which to restore /var/log
+    Description: The snapshot ID from which to restore /var/log
     Type: String
   LogDelPolicy:
     AllowedValues:
@@ -132,7 +132,7 @@ Parameters:
     Type: Number
   SpoolSnapshot:
     Default: ""
-    Description: The snapshot name from which to restore /var/spool
+    Description: The snapshot ID from which to restore /var/spool
     Type: String
   SwapSize:
     ConstraintDescription: Must be an integer.
