--- a/templates/aws-mirovoy-ref-arch-02-securitygroups.yaml
+++ b/templates/aws-mirovoy-ref-arch-02-securitygroups.yaml
@@ -58,7 +58,7 @@ Parameters:
     Default: 10.0.4.0/22
     Description: CIDR block for App subnet 1 located in Availability Zone 1.
       NAT instances in Public Availability Zone 1 will accept connections
-      on ports 80 and 443 from this CIDR block.
+      on ports 25, 80, 465, 443, and 587 from this CIDR block.
     Type: String
   AppSubnet2Cidr:
     AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/(1[6-9]|2[0-8])'
@@ -67,7 +67,7 @@ Parameters:
     Default: 10.0.8.0/22
     Description: CIDR block for App subnet 1 located in Availability Zone 1.
       NAT instances in Public Availability Zone 1 will accept connections
-      on ports 80 and 443 from this CIDR block.
+      on ports 25, 80, 465, 443, and 587 from this CIDR block.
     Type: String
   CreateMailSecGroup:
     AllowedValues:
@@ -169,6 +169,20 @@ Resources:
           FromPort: 443
           ToPort: 443
           CidrIp: !Ref AppSubnet1Cidr
+        # Always allow ports 25, 465, and 587 so any servers running in the
+        # app subnet can smtp status updates / errors
+        - IpProtocol: tcp
+          FromPort: 25
+          ToPort: 25
+          CidrIp: !Ref AppSubnet1Cidr
+        - IpProtocol: tcp
+          FromPort: 465
+          ToPort: 465
+          CidrIp: !Ref AppSubnet1Cidr
+        - IpProtocol: tcp
+          FromPort: 587
+          ToPort: 587
+          CidrIp: !Ref AppSubnet1Cidr
       VpcId:
         !Ref Vpc
 
@@ -190,6 +204,36 @@ Resources:
       IpProtocol: tcp
       FromPort: 443
       ToPort: 443
+      CidrIp: !Ref AppSubnet2Cidr
+
+  NatSecurityGroupIngress2port25:
+    Type: AWS::EC2::SecurityGroupIngress
+    Condition: 2AZs
+    Properties:
+      GroupId: !Ref NatSecurityGroup
+      IpProtocol: tcp
+      FromPort: 25
+      ToPort: 25
+      CidrIp: !Ref AppSubnet2Cidr
+
+  NatSecurityGroupIngress2port443:
+    Type: AWS::EC2::SecurityGroupIngress
+    Condition: 2AZs
+    Properties:
+      GroupId: !Ref NatSecurityGroup
+      IpProtocol: tcp
+      FromPort: 443
+      ToPort: 443
+      CidrIp: !Ref AppSubnet2Cidr
+
+  NatSecurityGroupIngress2port587:
+    Type: AWS::EC2::SecurityGroupIngress
+    Condition: 2AZs
+    Properties:
+      GroupId: !Ref NatSecurityGroup
+      IpProtocol: tcp
+      FromPort: 587
+      ToPort: 587
       CidrIp: !Ref AppSubnet2Cidr
 
   DatabaseSecurityGroup:
